# aios

./: .gitignore  Cargo.toml  Makefile.toml
kernel/: Cargo.toml  Makefile.toml  kernel.elf  x86_64-unknown-none-elf.json
kernel/.cargo/: config.toml
kernel/lib/: Cargo.toml
kernel/lib/src/: error.rs  lib.rs
kernel/lib/src/graphics/: common.rs  console.rs  font.rs  frame_buffer.rs  mod.rs  rect.rs  screen.rs
kernel/src/: main.rs
kernel/src/graphics/: common.rs  console.rs  font.rs  frame_buffer.rs  rect.rs
kernel/src/memory/: frame_alloc.rs  memmap.rs  mod.rs  paging.rs
loader/: Cargo.toml  Makefile.toml
loader/.cargo/: config.toml
loader/src/: elf.rs  main.rs
mnt/: kernel
mnt/EFI/BOOT/: loader.efi
