[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["boot"]

[dependencies]
bootloader = "0.10.13"
derive-new = "0.5.9"
log = "0.4.17"
spin = "0.9.4"
x86_64 = "0.14.10"

[package.metadata.bootloader]
map-physical-memory = true
